package functionalBuilder;

public class Arbre {
    protected int age;
    protected int taille;

    public Arbre(int age, int taille) {
        this.age = age;
        this.taille = taille;
    }
}
