package functionalBuilder;

public class Chene extends Arbre {
    private boolean feuilles;

    public Chene(int age, int taille, boolean feuilles) {
        super(age, taille);
        this.feuilles = feuilles;
    }
}
