package functionalBuilder;

public class Pin extends Arbre {
    private int cones;

    public Pin(int age, int taille, int cones) {
        super(age, taille);
        this.cones = cones;
    }
}
